fix spacing and center images

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -71,7 +71,7 @@ input, textarea, select{font-size:12px; font-family:Georgia,"Times New Roman",Ti
 .three_quarter{width:715px;}
 .four_quarter{width:960px; float:none; margin-right:0; clear:both;}
 
-.one_third, .two_third, .three_third{display:block; float:left; margin:0 30px 0 0;}
+.one_third, .two_third, .three_third{display:block; float:left; margin:0 10px 0 10px;}
 .one_third{width:300px;}
 .two_third{width:630px;}
 .three_third{width:960px; float:none; margin-right:0; clear:both;}
